JSAI/error/src/test/resources/base/v026.js
var o = {};
var x = o.toString();
print(x);
